# WallStreetBookie

./: .gitignore  LICENSE  README.md  design-preview.html
WallSteetBookie/util/: .gitignore
src/: pyproject.toml
src/app/: layout.py  main.py  search_results.py
src/backend/: api.py  main.py
src/frontend/: index.html  package.json  vite.config.js
src/frontend/src/: App.css  App.jsx  design-mockup.jsx
src/frontend/src/components/: FlowView.jsx  GlowCard.jsx  Home.jsx  MostActiveTable.jsx  PnLChart.jsx  ProfitCalculator.jsx  ResultsTable.jsx  SearchBar.jsx  SearchResults.jsx  Settings.jsx  StockCard.jsx  TabBar.jsx  TagEditor.jsx  TagFilter.jsx  TickerStrip.jsx  TickerTapeBackground.jsx  TitleBar.jsx  ToggleGroup.jsx  TradeAudit.jsx  Watchlist.jsx
src/frontend/src/hooks/: useApi.js
src/tests/: testing.ipynb
src/util/: calendar.py  chains.py  most_active_etfs.py  most_active_stocks.py  pnl.py  reddit_sentiment.py  scan.py  search.py  settings.py  stock_info.py  trade_audit.py  unusual_options_activity.py  volume.py  watchlist.py  yahoo_fin_options.py
stock-app/util/: .gitignore
tests/: test_watchlist_manual.py
