[tool.poetry]
name = "WallStreetBookie"
version = "0.4.1"
description = ""
authors = ["Terrance Williams"]
readme = "README.md"
packages = [
    { include = "util" },
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
scipy = "^1.15.0"
ipykernel = "^6.29.5"
yfinance = "^1.2.0"
beautifulsoup4 = "^4.13.3"
selenium = "^4.29.0"
python-dotenv = "^1.1.0"
pywebview = "^6.1"
google-generativeai = "^0.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
